# ProtoBot

./: .env  .gitignore  Cargo.nix  Cargo.toml  README.md  activity.py  flake.nix  protobot.py
data/: users.csv
src/: commands.rs  db.rs  holidays.rs  main.rs  santa.rs
