[package]
name = "protobot"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.7"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[features]
default = ["color-logging"]
color-logging = []
