[package]
name = "protobot"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
dotenv = "0.15.0"
poise = { version = "0.6.1-rc1" }
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.10.2"
rusqlite = "0.37.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[features]
default = ["color-logging"]
color-logging = []
